--- a/_docs/release-notes/helpcenter/2015/1.0.0.md
+++ b/_docs/release-notes/helpcenter/2015/1.0.0.md
@@ -1,7 +1,7 @@
 ---
 layout: release-notes
 title: HelpCenter Release Notes
-hide_welcome_banner: true
+section_root: release-notes
 category: release notes
 tags: [helpcenter]
 version: 1.0.0
