--- a/_docs/release-notes/basespace/2015/3.15.2.md
+++ b/_docs/release-notes/basespace/2015/3.15.2.md
@@ -1,7 +1,7 @@
 ---
 layout: release-notes
 title: March 13, 2015 - 3.15.2 - Email Fixes
-hide_welcome_banner: true
+section_root: release-notes
 category: release notes
 tags: [basespace]
 version: 3.15.2
