updated links from latest release notes

--- a/_docs/release-notes/helpcenter/2015/1.1.md
+++ b/_docs/release-notes/helpcenter/2015/1.1.md
@@ -15,11 +15,11 @@ HelpCenter 1.1 relase has a rich set of documentation added, along with minor bu
 
 **Major articles added**
 
-- Technical assistance document
-- Workflow model document
-- Set of BaseSpace File types documents
-- Set of Runs Charts documents
-- Instrument/Sample-sheet workflow graphs document
+- [Technical assistance](/articles/descriptive/technical-assistance/)
+- [Workflow model](/articles/descriptive/workflow-model/)
+- [BaseSpace File types](/articles/descriptive/file-types/) 
+- Runs Charts 
+- [Instrument/Sample-sheet workflow graphs](/articles/descriptive/workflow-graphs/)
 
 **New release notes added**
 
