--- a/_docs/release-notes/helpcenter/2015/1.1.md
+++ b/_docs/release-notes/helpcenter/2015/1.1.md
@@ -18,15 +18,15 @@ HelpCenter 1.1 relase has a rich set of documentation added, along with minor bu
 - [Technical assistance](/articles/descriptive/technical-assistance/)
 - [Workflow model](/articles/descriptive/workflow-model/)
 - [BaseSpace File types](/articles/descriptive/file-types/) 
-- Runs Charts 
+- [Runs Charts](/articles/descriptive/runs-charts/) 
 - [Instrument/Sample-sheet workflow graphs](/articles/descriptive/workflow-graphs/)
 
 **New release notes added**
 
-- SpaceDock
-- BaseSpace downloader
-- BaseSpace v3.16 release 
+- [SpaceDock](/release-notes/spacedock/2015/0.11.2/)
+- [BaseSpace downloader](/release-notes/mac-downloader/2015/1.0.500/)
+- [BaseSpace v3.16 release](/release-notes/basespace/2015/3.16.0/)
 
 **Bug fixes**
 
-- Modal video playback bug is fixed
+- Video and audio playback is now stopped when the video modal window is closed.
